--- a/index.html
+++ b/index.html
@@ -40,9 +40,17 @@
 		<p>▼▼scroll▼▼</p>
 	</div>
 
-	<video class="video" playsinline autoplay loop muted >
-		<source src="video/video.mp4"></source>
-	</video>
+	<div class="video-wrapper">
+	    <video class="video" playsinline autoplay loop muted >
+		    <source src="video/video.mp4"></source>
+	    </video>
+			<div class="video-menu">
+				<a class="menu-contents" href="#">FUJIYA's History</a>
+				<a class="menu-contents" href="#">FUJIYAの強み</a>
+				<a class="menu-contents" href="#">これまでの実績</a>
+				<a class="menu-contents" href="#">FUJIYAの未来</a>
+      </div>
+	</div>
 
 	<div class="business-wrapper">
 		<div class="container">
@@ -55,21 +63,14 @@
 				</div>
 			</div>
 
-			<div class="business">
-				<h3><a class="tenzikai" href="#">展示会</a></h3>
-			</div>
-
-			<div class="business">
-				<h3><a class="ibento" href="#">イベント</a></h3>
-			</div>
-
-			<div class="business">
-				<h3><a class="syogyosisetsu" href="#">商業施設</a></h3>
-			</div>
-
-			<div class="business">
-				<h3><a class="bunkasisetsu" href="#">文化・公共施設</a></h3>
-			</div>
+			<div class="business-btn">
+			  <ul class="business">
+				  <li class="btn2 tenzikai"><a href="#">展示会</a></li>
+				  <li class="btn2 ibento"><a href="#">イベント</a></li>
+				  <li class="btn2 syogyosisetsu"><a href="#">商業施設</a></li>
+				  <li class="btn2 bunkasisetsu"><a href="#">文化・公共施設</a></li>
+			  </ul>
+		  </div>
 		</div>
 	</div>
 
